; ModuleID = '/home/carl/AnghaBench/redis/deps/hiredis/extr_async.c___redisAsyncHandleConnect.c'
source_filename = "/home/carl/AnghaBench/redis/deps/hiredis/extr_async.c___redisAsyncHandleConnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 (%struct.TYPE_10__*, i32)*, %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }

@REDIS_ERR = common dso_local global i64 0, align 8
@REDIS_OK = common dso_local global i32 0, align 4
@REDIS_CONNECTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*)* @__redisAsyncHandleConnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__redisAsyncHandleConnect(%struct.TYPE_10__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  store i32 0, i32* %4, align 4
  %6 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %6, i32 0, i32 1
  store %struct.TYPE_9__* %7, %struct.TYPE_9__** %5, align 8
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %9 = call i64 @redisCheckConnectDone(%struct.TYPE_9__* %8, i32* %4)
  %10 = load i64, i64* @REDIS_ERR, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %32

12:                                               ; preds = %1
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %14 = call i32 @redisCheckSocketError(%struct.TYPE_9__* %13)
  %15 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %15, i32 0, i32 0
  %17 = load i32 (%struct.TYPE_10__*, i32)*, i32 (%struct.TYPE_10__*, i32)** %16, align 8
  %18 = icmp ne i32 (%struct.TYPE_10__*, i32)* %17, null
  br i1 %18, label %19, label %27

19:                                               ; preds = %12
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %20, i32 0, i32 0
  %22 = load i32 (%struct.TYPE_10__*, i32)*, i32 (%struct.TYPE_10__*, i32)** %21, align 8
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %24 = load i64, i64* @REDIS_ERR, align 8
  %25 = trunc i64 %24 to i32
  %26 = call i32 %22(%struct.TYPE_10__* %23, i32 %25)
  br label %27

27:                                               ; preds = %19, %12
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %29 = call i32 @__redisAsyncDisconnect(%struct.TYPE_10__* %28)
  %30 = load i64, i64* @REDIS_ERR, align 8
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %2, align 4
  br label %56

32:                                               ; preds = %1
  %33 = load i32, i32* %4, align 4
  %34 = icmp eq i32 %33, 1
  br i1 %34, label %35, label %54

35:                                               ; preds = %32
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %36, i32 0, i32 0
  %38 = load i32 (%struct.TYPE_10__*, i32)*, i32 (%struct.TYPE_10__*, i32)** %37, align 8
  %39 = icmp ne i32 (%struct.TYPE_10__*, i32)* %38, null
  br i1 %39, label %40, label %47

40:                                               ; preds = %35
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %41, i32 0, i32 0
  %43 = load i32 (%struct.TYPE_10__*, i32)*, i32 (%struct.TYPE_10__*, i32)** %42, align 8
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %45 = load i32, i32* @REDIS_OK, align 4
  %46 = call i32 %43(%struct.TYPE_10__* %44, i32 %45)
  br label %47

47:                                               ; preds = %40, %35
  %48 = load i32, i32* @REDIS_CONNECTED, align 4
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %50 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = or i32 %51, %48
  store i32 %52, i32* %50, align 4
  %53 = load i32, i32* @REDIS_OK, align 4
  store i32 %53, i32* %2, align 4
  br label %56

54:                                               ; preds = %32
  %55 = load i32, i32* @REDIS_OK, align 4
  store i32 %55, i32* %2, align 4
  br label %56

56:                                               ; preds = %54, %47, %27
  %57 = load i32, i32* %2, align 4
  ret i32 %57
}

declare dso_local i64 @redisCheckConnectDone(%struct.TYPE_9__*, i32*) #1

declare dso_local i32 @redisCheckSocketError(%struct.TYPE_9__*) #1

declare dso_local i32 @__redisAsyncDisconnect(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
